[tool.poetry]
name = "datka"
version = "0.1.0"
description = "Misc data tools"
authors = ["Vera Galinova <veegalinova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ipywidgets = "^7.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
